add crypter, makefile
