# internal/entity/tg_message.go
@@ -1,9 +1,10 @@
 package entity
 
 type TGMessage struct {
-	ID     string `bson:"_id,omitempty" json:"id"`
-	ChatID string `bson:"chat_id" json:"chat_id"`
-	Text   string `bson:"text" json:"text"`
-	Answer string `bson:"answer,omitempty" json:"answer"`
-	File   string `bson:"file,omitempty" json:"file"`
+	ID        string `bson:"_id,omitempty" json:"id"`
+	ChatID    string `bson:"chat_id" json:"chat_id"`
+	Text      string `bson:"text" json:"text"`
+	Answer    string `bson:"answer,omitempty" json:"answer"`
+	File      string `bson:"file,omitempty" json:"file"`
+	CreatedAt string `bson:"created_at" json:"created_at"`
 }
